--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cep-promise": "^4.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "mysql": "^2.18.1"
